2009-06-19 John Wu <John.Wu at ACM.org>
	* src/category.cpp:1185 add test for currentDataDir() to prevent
	strcmp from using nil pointer (a problem reported by Jochen
	Schlosser)
	* src/part.cpp:346 remove test on nEvent to generate m_name
	regardless of the value of nEvents

2009-06-18 John Wu <John.Wu at ACM.org>
	* src/part.cpp: writeMetaData check the validity of activeDir
	before write it as alternative directory
	* examples/thula.cpp:607 allow the selection to be printed without
	-v option

2009-06-17 John Wu <John.Wu at ACM.org>
	* doc/dataLoading.html: add note about support for unsigned
	integers
	* src/array_t.h: update documentation about the class to reflect
	the change in name space (notice by matthias Vallentin)
	* src/part.h: change nEvent from type size_t to uint32_t
	* src/column.cpp: in function append (that takes directory name as
	input), remove the dependencies on thePart->currentDataDir (a
	problem reported by Jochen Schlosser)

2009-06-16 John Wu <John.Wu at ACM.org>
	* src/category.cpp:1216 add check for state of the partition
	before trancating the data file and .sp file in
	ibis::text::startPositions (a problem noticed by Jochen Schlosser)
	* src/array_t.h: put array_t template into namespace ibis (a
	change requested by Matthias Vallentin)

2009-06-12 John Wu <John.Wu at ACM.org>
	* src/table.h: add optional argument to ibis::tablex::addColumn
	and ibis::tablex::write to specify indexing options, add function
	ibis::tablex::writeMetaData
	* src/part.cpp: remove the special case for creating new directory
	from the constructor that takes two directory names as arguments
	* src/ibis.h: update the acknowledgement section in the doxygen
	documentation
	* src/column.h, src/column.cpp: move the decision of whether to
	load index under a mutex lock in the constructor of indexLock and
	in function loadIndex.  This should prevent an thread from using a
	partially constructed index (being created by another thread)
