@@ -49,7 +49,7 @@ ibis::column::column(const ibis::part* tbl, ibis::TYPE_T t,
 	throw "ibis::column::ctor unable to initialize the mutex";
     }
     if (m_desc.empty()) m_desc = name;
-    LOGGER(ibis::gVerbose > 3 && !m_name.empty() && thePart != 0)
+    LOGGER(ibis::gVerbose > 5 && !m_name.empty() && thePart != 0)
 	<< "initialized column " << name << " for partition " << tbl->name();
 } // ibis::column::column
 
@@ -261,7 +261,7 @@ ibis::column::column(const part* tbl, FILE* file)
 			       "valid name or type");
 	m_name.erase(); // make sure the name is empty
     }
-    LOGGER(ibis::gVerbose > 3 && thePart != 0)
+    LOGGER(ibis::gVerbose > 5 && thePart != 0)
 	<< "read info about column "
 	<< (m_name.empty() ? "???" : m_name.c_str()) << " for partition "
 	<< thePart->name();
@@ -281,7 +281,7 @@ ibis::column::column(const ibis::column& rhs) :
     if (pthread_mutex_init(&mutex, 0)) {
 	throw "ibis::column::ctor unable to initialize the mutex";
     }
-    LOGGER(ibis::gVerbose > 3 && !m_name.empty() && thePart != 0)
+    LOGGER(ibis::gVerbose > 5 && !m_name.empty() && thePart != 0)
 	<< "made a new copy of column "
 	<< (m_name.empty() ? "???" : m_name.c_str());
 } // copy constructor
@@ -291,7 +291,7 @@ ibis::column::~column() {
 	mutexLock mk(this, "~column");
 	writeLock wk(this, "~column");
 	delete idx;
-	LOGGER(ibis::gVerbose > 3 && !m_name.empty() && thePart != 0)
+	LOGGER(ibis::gVerbose > 5 && !m_name.empty() && thePart != 0)
 	    << "clearing column " << thePart->name() << '.' << m_name;
     }
 
